<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_gioithieu"
            android:title="@string/nav_gioithieu"
            android:icon="@drawable/ic_baseline_info_24"
            />
        <item android:id="@+id/nav_huongdan"
            android:title="@string/nav_huongdan"
            android:icon="@drawable/ic_baseline_history_24"
            />
        <item android:id="@+id/nav_chiase"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/nav_chiase"
            />

        <item android:id="@+id/nav_doimatkhau"
            android:icon="@drawable/ic_baseline_lock_open_24"
            android:title="@string/nav_doimatkhau"
            />

        <item android:id="@+id/nav_dangxuat"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@string/nav_dangxuat"
            />
    </group>
</menu>