<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".fragment.nhanvien.FragmentForgotpassword">
    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_lock_open_24"
        android:contentDescription="@string/icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/text_forgot_password_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/text_forgot_password_message"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:hint="@string/hint_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:singleLine="true"
        android:autofillHints="@string/icon" />
    <TextView
        android:id="@+id/text_get_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text=""
        />
    <Button
        android:id="@+id/button_send"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:minHeight="60dp"
        android:text="@string/button_send" />
</LinearLayout>
