<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".fragment.nhanvien.FragmentLogin">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp"
            android:scaleType="centerInside"
            android:src="@drawable/shopcolordiff"
            android:contentDescription="@string/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/text_signin_message"
            android:textSize="16sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:hint="@string/hint_username"
            android:imeOptions="actionNext"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:singleLine="true"
            android:drawablePadding="10dp"
            android:autofillHints="@string/icon"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:autofillHints="@string/icon" />
        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:clickable="true"
            android:textStyle="bold"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/ic_textview_bg_2"
            android:text="@string/text_forgot_password"
            android:layout_marginTop="10dp"
            android:focusable="true" />

        <Button
            android:id="@+id/button_signin"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/button_sign_in"
            android:minWidth="320dp"
            android:minHeight="60dp" />

        <TextView
            android:id="@+id/textRegister"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:focusable="true"
            android:background="@drawable/ic_textview_bg_2"
            android:text="@string/text_signin_signup" />
</LinearLayout>