<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.nhanvien.FragmentRegister">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signup_message"
            android:textColor="#696969"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_add_avt"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_add_24"
                android:contentDescription="@string/icon" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgNhanVien"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:fitsSystemWindows="true"
                android:paddingBottom="10dp"
                android:layout_gravity="center"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:singleLine="true"
            android:autofillHints="@string/icon"
            />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"

            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="12dp"
            android:inputType="text"
            android:hint="@string/hint_username"
            android:imeOptions="actionNext"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:singleLine="true"
            android:autofillHints="@string/icon"
            />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="12dp"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:singleLine="true"
            android:autofillHints="@string/icon"
            android:inputType="phone"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:autofillHints="@string/icon" />
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:autofillHints="@string/icon"
            />
        <Button
            android:id="@+id/button_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/button_sign_up"
            android:minWidth="342dp"
            android:minHeight="60dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:textSize="13sp"
            android:padding="8dp"
            android:text="@string/text_signup_terms" />
    </LinearLayout>
</ScrollView>