<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.hoadon.FragmentAddHoaDon">

            <TextView
                android:id="@+id/addSoHoaDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="17sp"
                android:background="@drawable/bg_textview"
                android:layout_marginBottom="1dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
               android:paddingBottom="10dp"
                />
            <TextView
                android:id="@+id/tenNhanVienHoaDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text=""
                android:background="@drawable/bg_textview"
                android:textSize="17sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
                <TextView
                    android:id="@+id/tv_tenkhachhang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="17sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/bg_textview"
                    android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:gravity="clip_vertical"
                    />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycer_hoadon_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_textview"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:text="@string/addhoadon_tongtien"
                    android:textSize="17sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />
                <TextView
                    android:id="@+id/tongtienhoadon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="17sp"
                    android:layout_weight="2"
                    android:textAlignment="gravity"
                    android:gravity="end"
                    android:clickable="true"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:focusable="true" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/add_hoadon_donhang"
                android:layout_width="match_parent"
                android:text="@string/addhoadon_luuhoadon"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp" />
            <Button
                android:id="@+id/add_hoadon_donhang_no"
                android:layout_width="match_parent"
                android:text="@string/addhoadon_luuhoadon_no"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="5dp"
                android:layout_height="60dp"
                 />
        </LinearLayout>
</LinearLayout>
